Bug 1440468 - Proxied functions can't be passed to Function.prototype.toString.call(). r=anba